Added all sort of singleton approaches into java world till 24